--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
+    "firebase": "^4.1.3",
+    "normalize-css": "^2.3.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "uuid": "^3.1.0"
   }
 }
